# AI-BOOTCAMP

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/Project/1. HW-L02-01-Python/: 1.py  2.py  3.py  4.py  5.py
notebooks/Project/2. HW_L02_02_python/Mini Recommendation System/: 1. Mini Recommendation System.ipynb  json_maker.py  recommender.py
notebooks/Project/2. HW_L02_02_python/Simulator Modular AI Pipeline/: TEXT.txt  (+3 more)
notebooks/Project/3. HW_L03_01_numpy_pandas/: HW_L03_01_numpy_pandas.ipynb
notebooks/Project/4. HW_L03_02_pandas_matplotlib/: HW_L03_02_pandas_matplotlib.ipynb
notebooks/Project/5. HW_L03_03_ML/: HW_L03_03_ML.ipynb
notebooks/Project/6. HW_L04_01_Deep_Learning/: HW_L04_01_Deep_Learning.ipynb
notebooks/Training & Education/: .gitignore  1. Python 1st.ipynb  10. Pandas 4th.ipynb  11. Matplotlib 1st.ipynb  12. Matplotlib 2nd.ipynb  13. Machine Learning 1st.ipynb  14. Machine Learning 2nd.ipynb  15. Machine Learning 3rd.ipynb  16. Machine Learning pert 2-1st.ipynb  17. Machine Learning pert 2-2nd.ipynb  18. Machine Learning pert 2-3rd.ipynb  19. hyper_delay 1st.ipynb  2. Python Training.ipynb  20. Linear Algebra 1st.ipynb  21. pytorch.ipynb  22. pytorch and ML.ipynb  4. 1st Online Class.ipynb  5. 2nd Online Class.ipynb  6. Numpy 1st.ipynb  7. Pandas 1st.ipynb  8. Pandas 2nd.ipynb  9. Pandas 3nd.ipynb  Modules_and_Package.py
notebooks/Training & Education/1. OOP Project/: base.py  circle.py  main.py  rectangle.py
notebooks/Training & Education/my_package/: mathematics.py
tests/: test_data.py
(+2 files in other folders)
