[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ai_bootcamp"
version = "0.0.1"
description = "AI Bootcamp: A 6-month intensive program covering Python programming, Artificial Intelligence models, Computer Vision, and more"
authors = [
  { name = "Mohsen Mohebbi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["ai_bootcamp"]
include = ["pyproject.toml", "ai_bootcamp/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ai_bootcamp"]
force-sort-within-sections = true

